fix: change username pattern and password (#96)